﻿IMPROVEMENTS / FIXES
- General:
	- Add tracking of 'named modules' (from non-dependency DLLs) to the VesselModuleRegistry.
	- Optimise "Vector3.Distance(from, to) < dist" type checks.
- UI:
	- rcsOverride enabled ECMJammers now properly affect RCs in the SPH/VAB RCS GUI.
	- Fix Equivalent Armor Thickness readout in the Armor GUI
- AI / WM:
	- AI GUI fixes for surface AI.
	- Fix AI disengagement from launched nuclear/EMP ordinance if within projected blast radius.
	- Expose the weave strength factor as a tunable parameter for the surface and VTOL AI.
	- AI will now toggle/disable ECM Jammers if underfire from GPS/antiradition ordinance.
- Weapons:
	- Fix BurstFirelength and FireAngleOverride toggles not working in flight.
	- Fix APS parts getting mixed in with global weapon shortnaming and overriding barrage settings.
	- Anti-Ballistic APS no longer assigns multiple turrets to a single incoming shell, now respects reloading/overheated state of the weapon during target assignement
	- Guns now properly respect crossfeed.
	- Don't apply the unity integrator correction to the unsupported gravity component of the aiming (improves on-orbit aiming).
	- Improve the estimate of the required OverlapSphere for Vessel-Relative Bullet Checks for hypervelocity craft.
	- Increased Abrams Turret Accuracy; Abrams can now hit a tank-sized target from 2km again.
	- Missiles:
		- Add new Inertial guidance mode.
		  - Add new 'inertialDrift' missileLauncher field for INS drift, in meters/sec.
		- Have torpedoes head to last known contact point and start circling it, instead of current sink to bottom behavior.
		- MultiMissileLauncher deploy anim toggle now affects symmetry twins.
		- Fix various NullReferenceExceptions when trying to use Modular Missiles.
		- Antirad missiles using antiRadTypes = 9 now properly home in on active ECM jammers.