@@ -274,7 +274,14 @@ Localization
         #LOC_BDArmory_simple = Ammo Config: Simple
         #LOC_BDArmory_useBelt = Using Custom Loadout:
         #LOC_BDArmory_save = Save
+        #LOC_BDArmory_saveClose = Save & Close
         #LOC_BDArmory_reset = Reset
+        #LOC_BDArmory_applyTo = Apply To
+        #LOC_BDArmory_WeaponGroup = Weapon Group GUI
+        #LOC_BDArmory_AddToWpnGroup = Add to Weapon Group:
+        #LOC_BDArmory_thisWeapon = this weapon
+        #LOC_BDArmory_SymmetricWeapons = symmetric weapons
+
 
         // Vessel Spawner
         #LOC_BDArmory_BDAVesselSpawner_Title = BDA Vessel Spawner
